--- a/data-structures/repeatedWord/.README.md
+++ b/data-structures/repeatedWord/.README.md
@@ -1,4 +1,6 @@
-- # Find the first repeated word in a book
+# Find the first repeated word in a book
+
+- [Pull Request](https://github.com/Thomas720/data-structures-and-algorithms/pull/37)
 
 ## Approach & Solution
 
